5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1800_2569.log
== TEST (2019-06-13 00:41:15) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("Digite o vetor de num reais: ")))
n=size(x)
p=1
med= sum(x)/size(x)

for i in range x:
	p=p*abs(y-med)
p=p**(1/n)
print(round(p,3))
	
-- ERROR:
File "XXXX", line 8
    for i in range x:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:41:36) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("Digite o vetor de num reais: ")))
n=size(x)
p=1
med= sum(x)/size(x)

for i in range x:
	p=p*abs(i-med)
p=p**(1/n)
print(round(p,3))
	
-- ERROR:
File "XXXX", line 8
    for i in range x:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:41:55) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("Digite o vetor de num reais: ")))
n=size(x)
p=1
med= sum(x)/size(x)

for i in range(x):
	p=p*abs(i-med)
p=p**(1/n)
print(round(p,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:42:28) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("Digite o vetor de num reais: ")))
n=size(x)
p=1
med= sum(x)/size(x)

for i in range(x):
	p=p*abs(i-med)
p=p**(1/n)
print(round(p,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:42:59) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("Digite o vetor de num reais: ")))
n=size(x)
med= sum(x)/size(x)

for i in range(x):
	p=p*abs(i-med)
p=p**(1/n)
print(round(p,3))
	
-- EXECUTION TIME:
0.911135
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2569/main.py", line 7, in <module>
    for i in range(x):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:43:48) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("Digite o vetor de num reais: ")))
p=1
med= sum(x)/size(x)
n=size(x)

for i in x:
	p=p*abs(i-med)
p=p**(1/n)
print(round(p,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:44:05) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("Digite o vetor de num reais: ")))
p=1
med= sum(x)/size(x)
n=size(x)

for i in x:
	p=p*abs(i-med)
p=p**(1/n)
print(round(p,3))
	
-- EXECUTION TIME:
1.20961
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
61.208
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
12.999
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.172
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:44:44) 
-- CODE:
from numpy import*
from math import*
x=array(eval(input("Digite o vetor de num reais: ")))
p=1
med= sum(x)/size(x)
n=size(x)

for i in x:
	p=p*abs(i-med)
p=p**(1/n)
print(round(p,3))
	
-- EXECUTION TIME:
1.16914
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
61.208
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
12.999
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.172
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:45:35) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("Digite o vetor de num reais: ")))
p=1
med= sum(a)/size(a)
n=size(a)

for i in a:
	p=p*abs(i-med)
p=p**(1/n)
print(round(p,3))
	
-- EXECUTION TIME:
1.1512
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
61.208
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
12.999
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.172
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:51:23) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("Digite o vetor de num reais: ")))
p=1
med= sum(a)/size(a)
n=size(a)

for i in a:
	p=p*abs(i-med)
p=p**(1/n)
print(round(p,3))
	
-- EXECUTION TIME:
1.1603
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
61.208
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
12.999
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.172
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:54:45) 
-- CODE:
from numpy import*
from math import*
a = array(eval(input("Digite o vetor: ")))
p=1
med=sum(a)/size(a)
n=size(a)
for y in a:
	p=p*abs(y-med)
p=p**(1/n)
print(round(p,3))
	
-- EXECUTION TIME:
1.21552
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
61.208
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
12.999
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.172
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:55:25) 
-- CODE:
from numpy import*
from math import*
a = array(eval(input("Digite o vetor: ")))
p=1
med=sum(a)/size(a)
n=size(a)
for y in a:
	p=p*abs(y-med)
p=p**(1/n)
print(round(p,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:56:33) 
-- CODE:
from numpy import*
from math import*
a = array(eval(input("Digite o vetor: ")))
p=1
med=sum(a)/size(a)
n=size(a)
for y in a:
	p=p*(y-med)**2
p=p**(1/n)
print(round(p,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:56:37) 
-- CODE:
from numpy import*
from math import*
a = array(eval(input("Digite o vetor: ")))
p=1
med=sum(a)/size(a)
n=size(a)
for y in a:
	p=p*(y-med)**2
p=p**(1/n)
print(round(p,3))
	
-- EXECUTION TIME:
1.61703
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
3746.43
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
168.972
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:56:38) 
-- CODE:
from numpy import*
from math import*
a = array(eval(input("Digite o vetor: ")))
p=1
med=sum(a)/size(a)
n=size(a)
for y in a:
	p=p*(y-med)**2
p=p**(1/n)
print(round(p,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:03:00) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("Digite o vetor: ")))
b=sum(v)/size(v)
i=0
for y in v:
	i=i+(y-b)**2
i=sqrt(i/(size(v)-1))
print(round(i,3))
	
-- EXECUTION TIME:
0.974835
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
Digite o vetor: 0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:03:12) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("Digite o vetor: ")))
b=sum(v)/size(v)
i=0
for y in v:
	i=i+(y-b)**2
i=sqrt(i/(size(v)-1))
print(round(i,3))
	
-- EXECUTION TIME:
1.17284
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
